network-policies.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: httpbin-policy
# spec:
#   podSelector:  
#     matchLabels:
#       app: httpbin
#   ingress:
#   - from:
#     - podSelector:
#         matchLabels:
#           app: sleep
#   policyTypes:
#   - Ingress # default
# --- 
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: sleep-policy
# spec:
#   podSelector:  
#     matchLabels:
#       app: sleep 
#   egress: 
#   - {}
#   # ingress:
#   # - {}
#   policyTypes: 
#   # - Ingress
#   - Egress
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: demo-server-policy
#   namespace: default
# spec:
#   podSelector:
#     matchLabels:
#       app: demo-server
#   ingress:
#   - from:
#     - podSelector:
#         matchLabels:
#           app: demo-client
#   policyTypes:
#   - Ingress
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: demo-client-policy
#   namespace: default
# spec:
#   podSelector:
#     matchLabels:
#       app: demo-client
#   egress:
#   - {}
#   policyTypes:
#   - Egress
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: nginx-policy
#   namespace: default
# spec:
#   podSelector:
#     matchLabels:
#       app: nginx
#   ingress:
#   - {}
#   policyTypes:
#   - Ingress
